Cleanup: use collectors .toList()